# MKL_Eigen_interop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmark/: from_matrix.cpp  from_matrix_1000x1000.cpp  main.cpp
